# soario

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Dotnet/: .editorconfig  Dotnet.sln  Dotnet.sln.DotSettings
Dotnet/Soario/: App.cs  AppVars.cs  Application.cs  Entry.cs  Soario.csproj
Dotnet/Soario/Native/: Blob.cs  Error.cs  FFI.cs  FFIEx.cs  LoggerEx.cs  NativeArray.cs  NativeString8.cs  NativeWaitHandle.cs
Dotnet/Soario/Properties/: launchSettings.json
Dotnet/Soario/Rendering/: Gpu.cs  GpuCmdList.cs  GpuDepthFormat.cs  GpuDevice.cs  GpuPipelineLayout.cs  GpuPipelineState.cs  GpuQueue.cs  GpuResource.cs  GpuSurface.cs  GpuTask.cs  GpuTextureFormat.cs  IGpuRes.cs  IRt.cs  ResourceState.cs  Shader.cs  ShaderAssetMeta.cs  ShaderMeta.cs  ShaderPass.cs  Shaders.cs
Dotnet/Soario/Resources/: AAsset.cs  Assets.cs
Dotnet/Soario/Shading/: Shader.cs  ShaderMeta.cs  Shaders.cs
Dotnet/Soario/Utils/: NativeTypeNameAttribute.cs  NativeUtf8StringList.cs  Time.cs  Utils.cs
Dotnet/Soario/Windowing/: Window.cs  WindowException.cs
cmake/: FindDotnet.cmake
scripts/: build_dotnet.ts  build_shader.ts  meta.ts
src/: App.cc  App.h  Args.cc  Args.h  main.cpp  pch.h
src/api/: Api.cc  Api.h  App.h  FWindow.cc  FWindow.h  FnPtrs.h  IWindow.cc  IWindow.h  Init.h  Time.h
src/ffi/: App.h  FFI.cc  FFI.h  FLogLevel.h  FMemory.cc  FMemory.h  FString8.cc  FString8.h  FWindow.cc  FWindow.h  FnPtrs.h  Init.h
src/ffi/gpu/: FGpu.cc  FGpu.h  FGpuCmd.cc  FGpuCmd.h  FGpuDevice.cc  FGpuDevice.h  FGpuFormat.cc  FGpuFormat.h  FGpuPipelineLayout.cc  FGpuPipelineLayout.h  FGpuPipelineState.cc  FGpuPipelineState.h  FGpuQueue.cc  FGpuQueue.h  FGpuRes.cc  FGpuRes.h  FGpuResource.cc  FGpuResource.h  FGpuRt.cc  FGpuRt.h  FGpuSurface.cc  FGpuSurface.h  FGpuTask.cc  FGpuTask.h  FGpuView.cc  FGpuView.h  FShader.cc  FShader.h
src/render/: FrameContext.cc  FrameContext.h  Gpu.cc  Gpu.h  GpuBindLessPipelineLayout.cc  GpuBindLessPipelineLayout.h  GpuBuffer.cc  GpuBuffer.h  GpuBufferView.cc  GpuBufferView.h  GpuCommandList.cc  GpuCommandList.h  GpuCommands.cc  GpuCommands.h  GpuDescriptorSet.cc  GpuDescriptorSet.h  GpuDevice.cc  GpuDevice.h  GpuFencePak.cc  GpuFencePak.h  GpuPipelineConvert.cc  GpuPipelineConvert.h  GpuPipelineLayout.cc  GpuPipelineLayout.h  GpuPipelineState.cc  GpuPipelineState.h  GpuQueue.cc  GpuQueue.h  GpuResource.cc  GpuResource.h  GpuSurface.cc  GpuSurface.h  GpuSurfaceHwnd.cc  GpuSurfaceHwnd.h  GpuTask.cc  GpuTask.h  GpuView.cc  GpuView.h  IRT.cc  IRT.h  (+14 more)
src/shader/: bindless.hlsl  line.hlsl  rect.hlsl
src/utils/: Err.h  IObject.h  Object.h  Rc.h  String.cc  String.h  Time.cc  Time.h  console_utils.cc  dotnet.cc  dotnet.h  logger.h  new-delete.cc  sdl_error.cc  sdl_error.h  set_thread_name.cc  utf8_utf16.cc  utf8_utf16.h  utils.cc  utils.h
src/window/: Window.cc  Window.h
